# MemSysExplorer

./: README.md  run.py
apps/: Makefile  README.md  demo_profilers.ipynb  main.py
apps/benchmarks/cpu2017/: README.md
apps/config/: memcount_config.txt
apps/docs/: developing.rst  getting_start.rst  index.rst  licensing.rst  metadata.rst  packaging.rst  tools.rst
apps/docs/profilers/: dynamorio.rst  (+2 more)
apps/patches/: tracing_sniper.patch
apps/profilers/: PatternConfig.py
apps/profilers/common/: CMakeLists.txt
apps/profilers/common/include/: protobuf_writer.h
apps/profilers/common/proto/: timeseries_metrics.proto  timeseries_metrics_pb2.py
apps/profilers/common/src/: protobuf_writer.c
apps/temp/: CMakeLists.txt  dynamic_env_demo.c  perf_4-18.txt  perf_6-8-12.txt  perf_temp.sh  trace_test.c
apps/test/: Makefile  sample  sample_gpu.cu
apps/tools/: timeparser_plot.py  timeseries_parser.py  trace_parser.py  trace_viewer.py
configs/: README.md
configs/drio_run_config/: drio_test_run_new.yaml
configs/perf_run_config/: memsyspatternconfig_hello.json  perf_test_run_existing.yaml  perf_test_run_new.yaml  sample_FeFET_32nm_result.yaml
configs/sniper_run_config/: sniper_test_run.yaml  test_sniper
configs/sniper_run_config_existing/: sample_FeFET_32nm_result.yaml  sniper_existing_run.yaml  sniper_test_run_existing_data.yaml
configs/sniper_run_config_new/: sniper_new_run.yaml  sniper_test_run.yaml  test_sniper.c
configs/spec_2017_sniper_config/: sniper_spec_2017_FeFet_run.yaml  sniper_spec_2017_RRAM_run.yaml  sniper_spec_2017_STT_run.yaml  sniper_spec_2017_run.yaml
results/: README.md
run_src/: interfaces.py  model.py  utils.py
sample_programs/: Makefile  sample_binary.c  small_cpu_workload.c  small_gpu_workload.cu
tech/: README.md
tech/ArrayCharacterization/: Buffer.cpp  InputParameter.cpp  InputParameter.h  Makefile  Makefile.dep  MemCell.cpp  README.md  Result.cpp  Result.h  SubArray.cpp  Technology.cpp  macros.h  main.cpp  test_all_samples.sh
tech/msxFI/: README.md  demo_tutorial.py  fault_injection.py  fi_config.py  fi_utils.py  run_modes_nvm_fault_injection.sh  run_msxfi.py
testing/: README.md  run_all_arraycharacterization_samples.sh  validate_arraycharacterization_output.py  validate_drio_memsyspattern_config.py  validate_sniper_memsyspattern_config.py
(+246 files in other folders)
